# T30_embedded_system_project

./: CMakeLists.txt  README.md  cgi.h  globalVariables.h  htmldata.c  mag.h  main.c  motor.c
html_files/: index.shtml
irline/: CMakeLists.txt  barcode_scanner.c
magnometer/: CMakeLists.txt  mag.c  main.c
motor/: CMakeLists.txt  motor.c  motor.h
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic_interrupt  ultrasonic_interrupt.c
ultrasonic/from freertos lab/: picow_freertos_ping.c
wifi/: CMakeLists.txt  FreeRTOSConfig.h  cgi.h  globalVariables.h  htmldata.c  lwipopts.h  main.c  motor.c  ssi.h
wifi/html_files/: index.shtml
